# codex-voiceai

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  pyproject.toml  skills-lock.json  start-test.err
.claude/: settings.local.json
PRD/: browser-first-conversational-voice-agent.md  proactive-conversational-agent.md
app/: __init__.py  cartesia_tts.py  config.py  conversation_context.py  deepgram.py  events.py  exceptions.py  groq_agent.py  main.py  mock_conversation.py  pipeline.py  proactive.py  server.py  speech_director.py
codex_voiceai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/superpowers/plans/: 2026-05-14-contextual-speech.md  2026-05-14-voice-behavior-barge-in.md
docs/superpowers/specs/: 2026-05-14-contextual-speech-design.md  2026-05-14-voice-behavior-barge-in-design.md
frontend/: app.js  audio-behavior.js  index.html  pcm-worklet.js  pipecat.html  styles.css
plans/: browser-first-conversational-voice-agent.md  proactive-conversational-agent.md
tests/: test_cartesia_tts.py  test_config.py  test_conversation_context.py  test_deepgram_adapter.py  test_frontend_audio_behavior.py  test_groq_agent.py  test_live_conversation.py  test_phase1_app_shell.py  test_proactive_policy.py  test_speech_director.py
tests/js/: audio-behavior.test.mjs
