[project]
name = "codex-voiceai"
version = "0.1.0"
description = "Browser-first conversational voice agent MVP"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic-settings>=2.4.0",
    "websockets>=13.0",
    "pipecat-ai[deepgram,groq,cartesia,silero]>=1.2,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["app*"]
